fixed arrow visibility

--- a/style.css
+++ b/style.css
@@ -1155,3 +1155,71 @@ border-radius: 50%;
     --clr-contact:hsla(130, 5%, 24%, 1);
     
 }
+
+
+
+/* Carousel */
+.carousel{
+    
+    width: 55vw;
+    height: 70vh;
+    position: relative;
+}
+
+.Unordered{
+    padding: 0;
+    list-style-type: none;
+}
+
+
+.slide{
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    transition: 200ms opacity ease-in-out;
+    transition-delay: 200ms;
+}
+
+.slide img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.slide[data-active]{
+opacity: 1;
+z-index:1;
+transition-delay:0ms;
+}
+
+
+.carousel-button{
+    z-index: 2;
+    position: absolute;
+    border: none;
+    background:none;
+    font-size: 5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color:var( --clr-logo);
+    opacity: .5;
+    cursor: pointer;
+    border-radius: .25rem;
+    padding: 0 .5rem;
+}
+
+.carousel-button:hover{
+    color: #8A3033;
+
+}
+
+
+
+.carousel-button.prev{
+   right: 54.8vw;
+}
+.carousel-button.next{
+    left: 54.8vw;
+}
